fix: hapus animasi agar sticky navbar aktif

--- a/index.html
+++ b/index.html
@@ -18,22 +18,7 @@
         html {
             scroll-behavior: smooth;
         }
-        html
-{
-    overflow-x: hidden; 
-}
-
-@media screen and (max-width: 400px) {
-    html, body {
-    overflow-x: hidden; 
-  }
-}
-
-@media screen and (max-width: 1024px) {
-    html, body {
-    overflow-x: hidden; 
-  }
-}
+        
     </style>
 </head>
 <body>
@@ -42,7 +27,7 @@
 
     <!-- HERO SECTION -->
     <div class="bg-gradient-to-br bg-gradient-to-b from-indigo-500 via-purple-500 to-pink-500 text-white min-h-screencontainer mx-auto flex flex-col lg:flex-row items-center justify-between py-16 px-6">
-        <div class="lg:w-1/2 mb-12 lg:mb-0" data-aos="fade-right">
+        <div class="lg:w-1/2 mb-12 lg:mb-0" >
             <h1 class="text-4xl font-bold text-purple-300 mb-4">Software Solutions for Everyone</h1>
             <p class="text-gray-300 mb-6">
                 Software house services are needed to help your business connected with your target audience. Don't worry, we will make the process easy and quick as possible. So, what are you waiting for?
@@ -56,7 +41,7 @@
                 </button>
             </div>
         </div>
-        <div class="lg:w-100 bg-white text-gray-900 p-8 rounded-lg shadow-lg" data-aos="fade-left">
+        <div class="lg:w-100 bg-white text-gray-900 p-8 rounded-lg shadow-lg" >
             <h2 class="text-2xl font-bold mb-6">Let's build your dream Software with us.</h2>
             <form action="#" method="POST">
                 <div class="mb-4">
@@ -143,7 +128,7 @@
 
 <!-- about  -->
 
-    <div class="container mx-auto px-6 py-16 pb-16" data-aos="fade-up">
+    <div class="container mx-auto px-6 py-16 pb-16" >
         <div class="bg-gray-800 p-10 rounded-lg flex flex-col lg:flex-row items-center" >
             <div class="lg:w-1/2 mb-8 lg:mb-0">
                 <img src="assets/img/1904.i402.013..Web development isometric concept composition.jpg" alt="Abstract Art" class="rounded-lg shadow-lg mx-auto">
@@ -193,7 +178,7 @@
                     clip-rule="evenodd" />
             </svg>
         </div>
-        <div class="timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg md:text-end" data-aos="fade-right">
+        <div class="timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg md:text-end" >
             <time class="font-mono italic">2002</time>
             <div class="text-lg font-black">Launch of WebSphere</div>
             WebSphere, our flagship product, was introduced as a comprehensive suite of software tools designed to help businesses build, deploy, and manage web applications. It set new standards in web technology with its powerful integration and scalability features.
@@ -214,7 +199,7 @@
                     clip-rule="evenodd" />
             </svg>
         </div>
-        <div class="timeline-end mb-10 timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg" data-aos="fade-left">
+        <div class="timeline-end mb-10 timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg" >
             <time class="font-mono italic">2007</time>
             <div class="text-lg font-black">Introduction of SiteBuilder</div>
             SiteBuilder revolutionized website creation by allowing users to build stunning, functional websites with a user-friendly drag-and-drop interface. This innovation made web development accessible to everyone, from small businesses to large enterprises.
@@ -235,7 +220,7 @@
                     clip-rule="evenodd" />
             </svg>
         </div>
-        <div class="timeline-start mb-10 md:text-end timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg md:text-end" data-aos="fade-right">
+        <div class="timeline-start mb-10 md:text-end timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg md:text-end" >
             <time class="font-mono italic">2012</time>
             <div class="text-lg font-black">Launch of CloudSync</div>
             CloudSync was a game-changer in data management, offering seamless synchronization of files across multiple devices and platforms. It provided robust cloud storage solutions with advanced security features and collaborative tools.
@@ -256,7 +241,7 @@
                     clip-rule="evenodd" />
             </svg>
         </div>
-        <div class="timeline-end mb-10 timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg" data-aos="fade-left">
+        <div class="timeline-end mb-10 timeline-start bg-gray-800 text-white p-6 rounded-lg shadow-lg" >
             <time class="font-mono italic">2020</time>
             <div class="text-lg font-black">Launch of DevHub</div>
             DevHub marked our expansion into the development community with a comprehensive platform for software development. It integrates development tools, version control, and collaborative features to enhance productivity and streamline workflows for developers worldwide.
@@ -276,7 +261,7 @@
 
         <ul class="mt-8 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
             <!-- Team Member 1 -->
-            <li class="flex justify-center" data-aos="fade-up">
+            <li class="flex justify-center" >
                 <div class="card card-compact bg-base-100 w-full max-w-sm shadow-xl">
                     <figure>
                         <img src="assets/img/cat kul.jpg" alt="Rahsya" class="h-48 sm:h-56 w-full object-cover" />
@@ -291,7 +276,7 @@
                 </div>
             </li>
             <!-- Team Member 2 -->
-            <li class="flex justify-center" data-aos="fade-up">
+            <li class="flex justify-center" >
                 <div class="card card-compact bg-base-100 w-full max-w-sm shadow-xl">
                     <figure>
                         <img src="assets/img/bris.jpg" alt="Benova" class="h-48 sm:h-56 w-full object-cover" />
@@ -306,7 +291,7 @@
                 </div>
             </li>
             <!-- Team Member 3 -->
-            <li class="flex justify-center" data-aos="fade-up">
+            <li class="flex justify-center" >
                 <div class="card card-compact bg-base-100 w-full max-w-sm shadow-xl">
                     <figure>
                         <img src="assets/img/by.jpg" alt="Akbar" class="h-48 sm:h-56 w-full object-cover" />
@@ -422,7 +407,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nemo corrupti quos aperiam sunt. Voluptatem?
         </p>
     </div>
-    <div class="lg:flex lg:justify-center lg:items-start lg:gap-8" data-aos="fade-up">
+    <div class="lg:flex lg:justify-center lg:items-start lg:gap-8" >
         <!-- Google Maps Embed -->
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15958.625980499348!2d101.4378965!3d0.5160427!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5ada587458ae7%3A0x8fbcc32e7aa3065f!2sPT%20Solusi%20Data%20Madani!5e0!3m2!1sid!2sid!4v1725436434427!5m2!1sid!2sidd" 
                 allowfullscreen="" 
